--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,8 @@ jobs:
       run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git rm ./*.m3u8
-          git rm ./*.xml
+          git rm *.m3u8
+          git rm *.xml
           
     - name: commit deleted old files
       uses: zwaldowski/git-commit-action@v1
