--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,24 +23,24 @@ jobs:
     - uses: actions/checkout@v2
     
           
-    - name: Delete Old Files
-      run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git rm ./*.m3u8
-          git rm ./*.xml
-          
-    - name: commit deleted old files
-      uses: zwaldowski/git-commit-action@v1
-      with:
-             commit_message:  "deleted old files by bot"
-             working_directory: .
-           
-    - name: Push changes for old files
-      uses: ad-m/github-push-action@master
-      with:
-          github_token: ${{ secrets.scrapper_token }}
-          branch: ${{ github.ref }}
+#    - name: Delete Old Files
+#      run: |
+#          git config --local user.email "action@github.com"
+#          git config --local user.name "GitHub Action"
+#          git rm ./*.m3u8
+#          git rm ./*.xml
+#          
+#    - name: commit deleted old files
+#      uses: zwaldowski/git-commit-action@v1
+#      with:
+#             commit_message:  "deleted old files by bot"
+#             working_directory: .
+#           
+#    - name: Push changes for old files
+#      uses: ad-m/github-push-action@master
+#      with:
+#          github_token: ${{ secrets.scrapper_token }}
+#          branch: ${{ github.ref }}
  
  
  
@@ -66,17 +66,17 @@ jobs:
       run: echo "::set-output name=date::$(date '+%Y-%m-%d')"
 
                                    
-    - name: create workflow artifact #this is created, so if theres an error, you can look back at previous yml
-      uses: actions/upload-artifact@v2
-      with:
-       name: workflow_${{ steps.date.outputs.date }}
-       path: .github/workflows/m3u8_converter.yml
+#    - name: create workflow artifact #this is created, so if theres an error, you can look back at previous yml
+#      uses: actions/upload-artifact@v2
+#      with:
+#       name: workflow_${{ steps.date.outputs.date }}
+#       path: .github/workflows/m3u8_converter.yml
        
-    - name: Commit All Files
-      uses: zwaldowski/git-commit-action@v1
-      with:
-             commit_message: Updated by Bot - ${{ steps.date.outputs.date }}
-             working_directory: .
+#    - name: Commit All Files
+#      uses: zwaldowski/git-commit-action@v1
+#      with:
+#             commit_message: Updated by Bot - ${{ steps.date.outputs.date }}
+#             working_directory: .
 
     - name: Push changes
       uses: ad-m/github-push-action@master
