--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -56,8 +56,8 @@ jobs:
 #    - name: Copy m3u8s
 #      uses: canastro/copy-file-action@master
 #      with:
-#          source: "./temp/m3u8_static/*.m3u8"
-#          target: "./m3u8"
+#          source: "./*.m3u8"
+#          target: "./m3u8/m3u8"
 #          flags: '-r'
           
           
@@ -72,15 +72,15 @@ jobs:
 #       name: workflow_${{ steps.date.outputs.date }}
 #       path: .github/workflows/m3u8_converter.yml
        
-    - name: Commit All Files
-      uses: zwaldowski/git-commit-action@v1
-      with:
-             commit_message: Updated by Bot - ${{ steps.date.outputs.date }}
-             working_directory: .
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-          github_token: ${{ secrets.scrapper_token }}
-          branch: ${{ github.ref }}
+#    - name: Commit All Files
+#      uses: zwaldowski/git-commit-action@v1
+#      with:
+#             commit_message: Updated by Bot - ${{ steps.date.outputs.date }}
+#             working_directory: .
+#
+#    - name: Push changes
+#      uses: ad-m/github-push-action@master
+#      with:
+#          github_token: ${{ secrets.scrapper_token }}
+#          branch: ${{ github.ref }}
           
