--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Pluto IPTV
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
           
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -49,15 +49,23 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    
-    - run: npx pluto-iptv 
+        
+    - name: Get Pluto lists
+      run: npx pluto-iptv 
 
 
     - name: Copy m3u8s
       uses: canastro/copy-file-action@master
       with:
           source: "./*.m3u8"
-          target: "./m3u8/m3u8"
+          target: "./m3u8/pluto.m3u8"
+          flags: '-r'
+          
+    - name: Copy xml
+      uses: canastro/copy-file-action@master
+      with:
+          source: "./*.xml"
+          target: "./xml/plutoepg.xml"
           flags: '-r'
           
           
